File list. Virker fra database

--- a/Html/UploadPage.html
+++ b/Html/UploadPage.html
@@ -14,6 +14,25 @@
     <button>Upload</button>
 </form>
 
+        <table style='height: 50%; width: 75%; border-collapse: collapse;'>
+
+            <tr>
+
+                <th>Name</th>
+
+                  <td><%= files.name %></td>
+
+
+            </tr>
+
+            <% }); %>
+
+        </table>
+
+<ul id="/files/"></ul>
 <script src="/Js/FetchFile.js"></script>
 
-</body></html>
+
+
+</body>
+</html>
