--- a/Html/UploadPage.html
+++ b/Html/UploadPage.html
@@ -30,6 +30,7 @@
 
 <ul id="/files/"></ul>
 <button id="a">Download file</button>
+<button id="d">Delete file</button>
 <script src="/Js/FetchFile.js"></script>
 
 
