--- a/Html/ImagePage.html
+++ b/Html/ImagePage.html
@@ -9,6 +9,11 @@
 
     <input type="file" name="image" id="imageInput" required />
     <input type="submit" value="Upload" />
+
+    <h1>Image Example</h1>
+    <img src="http://localhost:9090/image/borderlands 3 fejl.jpg" alt="Image Description">
+
+
 </form>
 
 <div class="gallery"></div>
