--- a/Html/ImagePage.html
+++ b/Html/ImagePage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Image Gallery</title>
-
+<link rel="stylesheet" href="/Css/ImagePage.css">
 </head>
 <body>
 <form id="uploadForm" enctype="multipart/form-data">
