Forside og styling påbegyndt

--- a/Html/Forside.html
+++ b/Html/Forside.html
@@ -8,31 +8,25 @@
 <body>
 
 <ul>
-    <li><a class="active" href="#home">Forside</a></li>
-    <li><a href="#news">Nyheder</a></li>
+    <li><a class="active" href="Forside.html">Forside</a></li>
+    <li><a href="PostPage.html">Nyheder</a></li>
     <li class="dropdown">
         <a href="#" class="dropbtn">Menu</a>
         <div class="dropdown-content">
             <a href="ImagePage.html">Billedegalleri</a>
             <a href="UploadPage.html">Mødereferater</a>
-            <a href="#">Kalender</a>
+            <a href="#">Bestyrelsen</a>
+            <a href="#">Udvalg</a>
+            <a href="#">Træningshold</a>
+            <a href="#">Sponsorer</a>
+            <a href="#">Kenler i kredsen</a>
+            <a href="#">Webmaster</a>
         </div>
     </li>
 </ul>
 
 <h1>Velkommen til Schæferhundeklubben kreds 62</h1>
 
-<script>
-
-    var img = document.createElement("img");
-
-    img.src = "";
-
-    var src = document.getElementById("myImg");
-
-    src.appendChild(img);
-
-</script>
 
 <h2>Lundbækvej 9, 2665 Vallensbæk</h2>
 
