Nu med billede på forsiden

--- a/Html/Forside.html
+++ b/Html/Forside.html
@@ -27,6 +27,7 @@
 
 <h1>Velkommen til Schæferhundeklubben kreds 62</h1>
 
+<img src="/img/Hundeklub.jpg" alt="Hundeklub billede">
 
 <h2>Lundbækvej 9, 2665 Vallensbæk</h2>
 
