faner på forsiden lavet

--- a/Html/Forside.html
+++ b/Html/Forside.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/Css/Hover.css">
@@ -11,18 +11,42 @@
     <li><a class="active" href="Forside.html">Forside</a></li>
     <li><a href="PostPage.html">Nyheder</a></li>
     <li class="dropdown">
-        <a href="#" class="dropbtn">Menu</a>
+
+        <a href="#" class="dropbtn">Bestyrelsen</a>
         <div class="dropdown-content">
-            <a href="ImagePage.html">Billedegalleri</a>
+            <a href="#">Hvem er vi</a>
             <a href="UploadPage.html">Mødereferater</a>
-            <a href="#">Bestyrelsen</a>
-            <a href="#">Udvalg</a>
-            <a href="#">Træningshold</a>
-            <a href="#">Sponsorer</a>
-            <a href="#">Kenler i kredsen</a>
-            <a href="#">Webmaster</a>
-        </div>
+        </div>>
+
+    <li class="dropdown">
+        <a href="#" class="dropbtn">Udvalg</a>
+        <div class="dropdown-content">
+            <a href="#">Avlsudvalg</a>
+            <a href="#">Brugshundeudvalg</a>
+        </div>>
+
+    <li class="dropdown">
+        <a href="#" class="dropbtn">Træningshold</a>
+        <div class="dropdown-content">
+            <a href="#">Ny hundefører</a>
+            <a href="#">Forkortelser</a>
+            <a href="#">Tilmelding til prøve</a>
+            <a href="#">Resultater prøver</a>
+            <a href="#">Resultater kåringer</a>
+        </div>>
+
+    <li><a class="active" href="ImagePage.html">Billedgalleri</a></li>
+        </li>
+    <li><a class="active" href="#">Sponsorer</a></li>
     </li>
+
+    <li class="dropdown">
+        <a href="#" class="dropbtn">Mere</a>
+        <div class="dropdown-content">
+            <a href="#">Kenneler i kredsen</a>
+   <a class="active" href="#">Webmaster</a>
+    </div>
+
 </ul>
 
 <h1>Velkommen til Schæferhundeklubben kreds 62</h1>
