--- a/Html/Forside.html
+++ b/Html/Forside.html
@@ -28,9 +28,9 @@
     <li class="dropdown">
         <a href="#" class="dropbtn">Træningshold</a>
         <div class="dropdown-content">
-            <a href="#">Ny hundefører</a>
-            <a href="#">Forkortelser</a>
-            <a href="#">Tilmelding til prøve</a>
+            <a href="NyHundefører.html">Ny hundefører</a>
+            <a href="Forkortelser.html">Forkortelser</a>
+            <a href="Tilmelding%20til%20prøve.html">Tilmelding til prøve</a>
             <a href="#">Resultater prøver</a>
             <a href="#">Resultater kåringer</a>
         </div>>
