--- a/Html/PostPage.html
+++ b/Html/PostPage.html
@@ -2,21 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/Css/Blog.css">
     <title>Post Page</title>
 </head>
 <body>
 <h1>Blog Post</h1>
 
 <form id="post-form">
-
-    <label for="title">Title:</label>
+    <p>    <label for="title">Title:</label>
     <input type="text" id="title" required>
     <br>
     <label for="body">Content:</label>
     <textarea id="body" required></textarea>
     <br>
 
+
     <button type="submit">Create Post</button>
+
+    </p>
 
 </form>
 
