igang med om os side

--- a/Html/Forside.html
+++ b/Html/Forside.html
@@ -14,7 +14,7 @@
 
         <a href="#" class="dropbtn">Bestyrelsen</a>
         <div class="dropdown-content">
-            <a href="#">Hvem er vi</a>
+            <a href="Om_os.html">Hvem er vi</a>
             <a href="UploadPage.html">Mødereferater</a>
         </div>>
 
@@ -30,7 +30,7 @@
         <div class="dropdown-content">
             <a href="NyHundefører.html">Ny hundefører</a>
             <a href="Forkortelser.html">Forkortelser</a>
-            <a href="Tilmelding%20til%20prøve.html">Tilmelding til prøve</a>
+            <a href="Tilmelding_til_prøve.html">Tilmelding til prøve</a>
             <a href="#">Resultater prøver</a>
             <a href="#">Resultater kåringer</a>
         </div>>
