--- a/Html/Om_os.html
+++ b/Html/Om_os.html
@@ -10,7 +10,7 @@
 
 <main>
 
-    <div id="createAboutUs">
+    <div id="aboutUsForm">
 
         <input type="text" name="Fornavn" placeholder="Fornavn" /><br>
         <input type="text" name="Efternavn" placeholder="Efternavn"><br>
@@ -25,8 +25,6 @@
     </form>
 
     <div id="aboutUsList"></div>
-
-    <button onclick="deleteAboutUs('${aboutUsModel.id}')">Delete</button>
 
     <div id="form2">
     <input type="text" name="updatename" placeholder="updated name" /><br>
