--- a/Html/Om_os.html
+++ b/Html/Om_os.html
@@ -18,7 +18,7 @@
         <input type="text" Email="Email" placeholder="Email"><br>
         <input type="text" Photo="photo" placeholder="photo"><br>
 
-        <button id="createitem">Opret medlem</button><br>
+        <button onclick="createAboutUs(event)">opret et medlem</button><br>
 
     </div>
 
