udvalg virker næsten

--- a/Html/Forside.html
+++ b/Html/Forside.html
@@ -21,8 +21,8 @@
     <li class="dropdown">
         <a href="#" class="dropbtn">Udvalg</a>
         <div class="dropdown-content">
-            <a href="#">Avlsudvalg</a>
-            <a href="#">Brugshundeudvalg</a>
+            <a href="AvlsUdvalg.html">Avlsudvalg</a>
+            <a href="BrugsHundeUdvlag.html">Brugshundeudvalg</a>
         </div>>
 
     <li class="dropdown">
