--- a/Html/BrugsHundeUdvlag.html
+++ b/Html/BrugsHundeUdvlag.html
@@ -5,9 +5,8 @@
     <script src="/Js/FetchSelectionBHU.js" defer></script>
 </head>
 <body>
-<h1>Formand for Brugshundeudvlaget</h1>
-
 <h2>Opret medlem</h2>
+
 <form id="createSelectionForm">
     <label for="name">Name:</label><br>
     <input type="text" id="name" required><br>
@@ -16,18 +15,15 @@
     <label for="email">Email:</label><br>
     <input type="text" id="email" required><br>
 
-    <button onclick="createSelection(selection)">opret et medlem</button><br>
+    <button onclick="createSelection()">opret et medlem</button><br>
 </form>
 
-<h2>Get All Selections</h2>
-<button id="getAllSelectionsButton">Liste af medlemmer</button>
+<h2>Liste af medlemmer</h2>
+<div id="SelectionList">Liste af medlemmer</div>
 
-<h2>Slet et medlem</h2>
-<form id="deleteSelectionForm">
-    <label for="selectionIdToDelete">Selection ID:</label>
-    <input type="text" id="selectionIdToDelete" required>
+<div id="message"></div>
 
-    <button type="submit">Slet medlem</button>
+
 </form>
 </body>
 </html>
