Nu med Webmaster

--- a/Html/Forside.html
+++ b/Html/Forside.html
@@ -37,7 +37,7 @@
 
     <li><a class="active" href="ImagePage.html">Billedgalleri</a></li>
         </li>
-    <li><a class="active" href="#">Sponsorer</a></li>
+    <li><a class="active" href="Sponser.html">Sponsorer</a></li>
     </li>
 
     <li class="dropdown">
