Nu med Webmaster

--- a/Html/Forside.html
+++ b/Html/Forside.html
@@ -44,7 +44,7 @@
         <a href="#" class="dropbtn">Mere</a>
         <div class="dropdown-content">
             <a href="#">Kenneler i kredsen</a>
-   <a class="active" href="#">Webmaster</a>
+   <a class="active" href="Webmaster.html">Webmaster</a>
     </div>
 
 </ul>
