--- a/Html/prøver.html
+++ b/Html/prøver.html
@@ -9,7 +9,8 @@
 
 <form id="trails.form">
 <label for="title">Title</label>
-    <input type="text" id="title">
+    <input type="text" id="title" required>
+
 
 </form>
 
