Changes by Joni

--- a/Html/prøver.html
+++ b/Html/prøver.html
@@ -7,12 +7,20 @@
 <body>
 <h1>Trails</h1>
 
-<form id="trails.form">
-<label for="title">Title</label>
+<form id="trails-form">
+
+   <p> <label for="title">Title</label>
     <input type="text" id="title" required>
-
-
+<br>
+<label for="body">Prøve discription
+</label>
+    <textarea id="body" required></textarea>
+    <br>
+    <button type="submit"Gem></button>
+</p>
 </form>
+
+<div id="trails-container"></div>
 
 <script src="Js/FetchTrails.js"></script>
 </body>
