Nu uden awards page

--- a/Html/prøver.html
+++ b/Html/prøver.html
@@ -22,6 +22,6 @@
 
 <div id="trails-container"></div>
 
-<script src="Js/FetchTrails.js"></script>
+<script src="/Js/FetchTrails.js"></script>
 </body>
 </html>
