Nu award page virker

--- a/Html/Kåringer.html
+++ b/Html/Kåringer.html
@@ -17,7 +17,7 @@
         <textarea id="body" required></textarea>
         <br>
 
-    <button type="submit">Opret et opslag</button>
+    <button type="submit">Opret en kåring</button>
 
     </p>
 
