Nu award page virker

--- a/Html/Forside.html
+++ b/Html/Forside.html
@@ -31,8 +31,8 @@
             <a href="NyHundefører.html">Ny hundefører</a>
             <a href="Forkortelser.html">Forkortelser</a>
             <a href="Tilmelding_til_prøve.html">Tilmelding til prøve</a>
-            <a href="#">Resultater prøver</a>
-            <a href="#">Resultater kåringer</a>
+            <a href="prøver.html">Resultater prøver</a>
+            <a href="Kåringer.html">Resultater kåringer</a>
         </div>>
 
     <li><a class="active" href="ImagePage.html">Billedgalleri</a></li>
