--- a/Html/Loginin.html
+++ b/Html/Loginin.html
@@ -7,18 +7,6 @@
 <body>
 <h1>Opret dig som Webmaster login</h1>
 
-<h2>Login</h2>
-
-<form id="loginForm">
-    <label for="username">Username:</label>
-    <input type="text" id="username" required><br>
-
-    <label for="password">Password:</label>
-    <input type="password" id="password" required><br>
-
-    <button type="submit">Login</button>
-</form>
-
 <h2>Registration</h2>
 <form id="registrationForm">
     <label for="regUsername">Username:</label>
@@ -38,10 +26,22 @@
     </select><br>
 
     <button type="submit">Register</button><br>
-<br>
-    <button id="signoutButton">Sign Out</button>
+</form>
 
-    <script src="/Js/FetchLogin.js"></script>
+<h2>Login</h2>
+<form id="loginForm">
+    <label for="username">Username:</label>
+    <input type="text" id="username" required><br>
+
+    <label for="password">Password:</label>
+    <input type="password" id="password" required><br>
+
+    <button type="submit">Login</button><br>
+</form>
+
+<button id="signoutButton">Sign Out</button>
+
+<script src="/Js/FetchLogin.js"></script>
 
 </form>
 </body>
