sign in virker, sign up virker

--- a/Html/Forside.html
+++ b/Html/Forside.html
@@ -45,6 +45,7 @@
         <div class="dropdown-content">
             <a href="#">Kenneler i kredsen</a>
    <a class="active" href="Webmaster.html">Webmaster</a>
+   <a class="active" href="Loginin.html">Login</a>
     </div>
 
 </ul>
