--- a/Html/Kåringer.html
+++ b/Html/Kåringer.html
@@ -6,6 +6,50 @@
 </head>
 <body>
 
+<link rel="stylesheet" href="/Css/Hover.css">
+<ul>
+    <li><a class="active" href="Forside.html">Forside</a></li>
+    <li><a href="PostPage.html">Nyheder</a></li>
+    <li class="dropdown">
+
+        <a href="#" class="dropbtn">Bestyrelsen</a>
+        <div class="dropdown-content">
+            <a href="Om_os.html">Hvem er vi</a>
+            <a href="UploadPage.html">Mødereferater</a>
+        </div>>
+
+    <li class="dropdown">
+        <a href="#" class="dropbtn">Udvalg</a>
+        <div class="dropdown-content">
+            <a href="AvlsUdvalg.html">Avlsudvalg</a>
+            <a href="BrugsHundeUdvlag.html">Brugshundeudvalg</a>
+        </div>>
+
+    <li class="dropdown">
+        <a href="#" class="dropbtn">Træningshold</a>
+        <div class="dropdown-content">
+            <a href="NyHundefører.html">Ny hundefører</a>
+            <a href="Forkortelser.html">Forkortelser</a>
+            <a href="Tilmelding_til_prøve.html">Tilmelding til prøve</a>
+            <a href="prøver.html">Resultater prøver</a>
+            <a href="Kåringer.html">Resultater kåringer</a>
+        </div>>
+
+    <li><a class="active" href="ImagePage.html">Billedgalleri</a></li>
+    </li>
+    <li><a class="active" href="Sponser.html">Sponsorer</a></li>
+    </li>
+
+    <li class="dropdown">
+        <a href="#" class="dropbtn">Mere</a>
+        <div class="dropdown-content">
+            <a href="#">Kenneler i kredsen</a>
+            <a class="active" href="Webmaster.html">Webmaster</a>
+            <a class="active" href="Loginin.html">Login</a>
+        </div>
+
+</ul>
+
 <h1>Kåringer</h1>
 
 <form id="awards-form">
