--- a/Html/Loginin.html
+++ b/Html/Loginin.html
@@ -63,12 +63,21 @@
     <label for="regPassword">Password:</label>
     <input type="password" id="regPassword" required><br>
 
-    <label for="role">Role:</label>
+    <!-- <label for="role">Role:</label>
     <select id="role">
         <option value="user">User</option>
         <option value="admin">Admin</option>
         <option value="mod">Moderator</option>
-    </select><br>
+    </select><br> -->
+
+    <label for="role">Role:</label>
+    <select id="role">
+        <option value="all">/all</option>
+        <option value="user">/user</option>
+        <option value="mod">/mod</option>
+        <option value="admin">/admin</option>
+    </select>
+    <div id="output"></div>
 
     <button type="submit">Register</button><br>
 </form>
@@ -86,6 +95,7 @@
 
 <button id="signoutButton">Sign Out</button>
 
+<script src="/Js/FetchUserLogin.js"></script>
 <script src="/Js/FetchLogin.js"></script>
 
 </form>
