--- a/Html/Loginin.html
+++ b/Html/Loginin.html
@@ -70,14 +70,16 @@
         <option value="mod">Moderator</option>
     </select><br> -->
 
+
     <label for="role">Role:</label>
     <select id="role">
-        <option value="all">/all</option>
-        <option value="user">/user</option>
-        <option value="mod">/mod</option>
-        <option value="admin">/admin</option>
+        <option value="all">all</option>
+        <option value="user">user</option>
+        <option value="mod">mod</option>
+        <option value="admin">admin</option>
     </select>
     <div id="output"></div>
+
 
     <button type="submit">Register</button><br>
 </form>
@@ -91,7 +93,7 @@
     <input type="password" id="password" required><br>
 
     <button type="submit">Login</button><br>
-</form>
+
 
 <button id="signoutButton">Sign Out</button>
 
