roles virker ikke

--- a/Html/Loginin.html
+++ b/Html/Loginin.html
@@ -71,8 +71,8 @@
     </select><br> -->
 
 
-    <label for="role">Role:</label>
-    <select id="role">
+    <label for="roles">Role:</label>
+    <select id="roles">
         <option value="all">all</option>
         <option value="user">user</option>
         <option value="mod">mod</option>
@@ -95,8 +95,7 @@
 
     <button type="submit">Login</button><br>
 
-
-<button id="signoutButton">Sign Out</button>
+    <button id="signoutButton">Sign Out</button>
 
 <script src="/Js/FetchUserLogin.js"></script>
 <script src="/Js/FetchLogin.js"></script>
